# pokemon-project-backend

./: README.md  main.py  pyproject.toml
src/: main.py  models.py
src/utils/: fetch.py  http_client.py  pokemon.py
tests/endpoints/: test_random_question.py  test_verify_answer.py
tests/helpers/: test_generate_pokeapi_query.py  test_generate_random_pokemon_ids.py
tests/integration/: test_random_question.py  test_verify_answer.py
